<resources>
    <string name="app_name">NotesApp</string>
    <string name="text_my_notes">My Notes</string>
    <string name="text_search_notes">Search Notes</string>
    <string name="text_note_title">Note Title</string>
    <string name="text_note_subtitle">Note Subtitle</string>
    <string name="text_type_note_here">Type Note Here</string>
    <string name="text_miscellaneous">Miscellaneous</string>
    <string name="text_pick_color">Pick Color</string>
    <string name="text_add_image">Add Image</string>
    <string name="text_add_url">Add URL</string>
    <string name="text_enter_url">Enter URL</string>
    <string name="text_add">ADD</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_update_note">Update Note</string>
    <string name="text_delete_note">Delete Note</string>
    <string name="text_delete_confirm">Are you sure you want to delete this note</string>
</resources>